19/01/2022:
	- Added missing minmax variable to View class to indicate a user-defined min/max. Forces use of the floating point
	  image processing pipeline in CVT.cc and JTL.cc


16/01/2022:
	- Modified TileManager.cc to verify that malloc() has correctly allocated memory.
	- Updated numerical types to std::size_t in RawTile.h, TileManager.cc, KakaduImage.cc, OpenJPEG.cc and Transforms.cc
	  when allocating memory via new to avoid integer overflow - fixes remaining problems identified in
	  https://github.com/ruven/iipsrv/issues/223.


15/01/2022:
	- Added verification that image has been set in SPECTRA.cc and check on the validity of the requested tile
	  resolution in JTL.cc. Fixes a couple of the crash conditions reported in https://github.com/ruven/iipsrv/issues/223


14/01/2022:
	- Detection of HTJ2K also added for KakaduImage.cc for logging purposes (DEBUG needs to be enabled at compile time)


07/01/2022:
	- Added detection of HTJ2K streams to OpenJPEG.cc for logging purposes (DEBUG needs to be enabled at compile time)


14/09/2021:
	- Fix to use C99 stdint types instead of deprecated libtiff types


13/09/2021:
	- Added extra error-checking to TIFFSetDirectory()


03/09/2021:
	- Handle the more stringent ICC profile checking introduced in libpng 1.6. Fix to prevent incorrect sRGB
	  profiles failing with an error.


06/07/2021:
	- Added support for PNG output. Functionality available through the CVT command (CVT=png) as well as through IIIF API.
	  PNG encoder supports alpha channels, 8 or 16 bit output, ICC profiles and XMP metadata.


02/07/2021:
	- Small modification to Compressor class and removal of duplicate quality parameter from JPEGCompressor class


28/04/2021:
	- Additional type casting added to IIIF.cc to avoid compiler warnings


21/04/2021:
	- Modified log transform function in Transform.cc to set appropriate input scaling for 8 bit output


13/04/2021: