@@ -1,7 +1,7 @@
 /*
     Image Transforms
 
-    Copyright (C) 2004-2021 Ruven Pillay.
+    Copyright (C) 2004-2022 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -86,6 +86,11 @@ struct Transform {
   /// Convert from CIELAB to sRGB colour space
   /** @param in tile data to be converted */
   void LAB2sRGB( RawTile& in );
+
+
+  /// Fast efficient scaling from higher fixed point bit depths to 8 bit
+  /** @param in tile data to be converted */
+  void scale_to_8bit( RawTile& in );
 
 
   /// Function to apply a contrast adjustment and clip to 8 bit
